ff_gen_search: fix infinite loop

Fixes Ticket2639

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>
(cherry picked from commit f8ca8138f01d0a7d96d4e1ea65fecd1197f96206)